--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@ant-design/icons": "^5.3.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "nedb": "^1.8.0"
   }
 }
