--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.3.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "nedb": "^1.8.0"
   }
 }
